--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MATHS">
         <activity
+            android:name=".ten_number"
+            android:exported="false" />
+        <activity
             android:name=".PuzzelActivity"
             android:exported="false" />
         <activity
@@ -32,7 +35,6 @@
         <activity
             android:name=".NumberSequenceActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
