--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
             android:name=".OrderActivity"
             android:exported="false" />
         <activity
-            android:name=""
+            android:name=".NumbersActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
