--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,11 +51,15 @@
             android:name=".OrderActivity"
             android:exported="false" />
         <activity
+            android:name=".Subballoon"
+            android:exported="false" />
+        <activity
             android:name=".NumbersActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
