--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,9 @@
             android:name=".InfoActivity"
             android:exported="false" />
         <activity
+            android:name=".num21to30"
+            android:exported="false" />
+        <activity
             android:name=".MinMaxPickerActivity"
             android:exported="false" />
         <activity
