--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,9 @@
             android:name=".NumbersActivity"
             android:exported="false" />
         <activity
+            android:name=".num31to99"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 
