--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
             android:name=".ten_number"
             android:exported="false" />
         <activity
+            android:name=".Coinsandcurrency"
+            android:exported="false" />
+        <activity android:name=".IntroActivity" />
+
+        <activity
             android:name=".PuzzelActivity"
             android:exported="false" />
         <activity
@@ -71,6 +76,10 @@
         <activity
             android:name=".num31to99"
             android:exported="false" />
+        <activity android:name=".QuizActivity" />
+        <activity android:name=".ChallengeActivity" />
+
+
         <activity
             android:name=".Contours"
             android:exported="false" />
